# cash_transportation

./: .gitignore  README.md  detalles  formatos.txt  planteoPL.txt  pyproject.toml  requirements.txt
artifacts/reports/: tabla_exp_2025-11-16_gurobi_2.0_10_1.5e-3_0.525_0.3444.txt  tabla_exp_2025-11-16_gurobi_2.0_10_3.0e-3_0.525_0.3444.txt  tabla_exp_2025-11-16_gurobi_2.0_20_1.5e-3_0.525_0.3444.txt  tabla_exp_2025-11-16_gurobi_5.0_10_1.5e-3_0.525_0.3444.txt  tabla_exp_2025-11-17_gurobi_2.0_10_1.5e-3_0.00_0.00.txt  tabla_exp_2025-11-17_gurobi_2.0_10_1.5e-3_0.25_0.25.txt  tabla_exp_2025-11-17_gurobi_2.0_10_1.5e-3_0.50_0.50.txt  tabla_exp_2025-11-17_gurobi_2.0_10_1.5e-3_0.75_0.75.txt  tabla_exp_2025-11-17_gurobi_2.0_10_1.5e-3_1.00_1.00.txt  tabla_exp_C_0.0_0.0015_2.0_10.csv  tabla_exp_C_0.25_0.0015_2.0_10.csv  tabla_exp_C_0.525_0.0015_2.0_10.csv  (+16 more)
cash_transportation/: Prueba_CUOPT.ipynb  ejemplos_1.py  exp_1.json  experimento_1.py  experimento_2.py  explora_2.py  explora_3.py  explora_4.py  explora_rutas.py  explora_rutas_scip.py  helpers.py  log_2  rutas_exploradas  rutas_exploradas.json  varianza_diaria.py
data/: experiments.csv  experiments_test.csv
experiments/: README.md
main/: __init__.py  configure.txt  datos_modelo.csv  helpers.py  main.py
scripts/: bench_mps_solvers.py  experimento_2.py  job_25_11_16.sh  job_25_11_17.sh  main.py  plot_exp_1.py  run_cuopt_mps.py  run_pulp_mps.py  tabla_exp_1.py
solverpulp/: model.py
solverscip/: modelo_2-sin_rutas.zpl  modelo_3.mps  modelo_3.sol  modelo_3.zpl  modelo_dual.lp  modelo_dual.mps  modelo_dual.tbl  scip_dual.b
(+151 files in other folders)
